; ModuleID = '/home/carl/AnghaBench/nanomsg/src/protocols/survey/extr_surveyor.c_nn_surveyor_resend.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/protocols/survey/extr_surveyor.c_nn_surveyor_resend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_surveyor = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.nn_msg = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nn_surveyor*)* @nn_surveyor_resend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nn_surveyor_resend(%struct.nn_surveyor* %0) #0 {
  %2 = alloca %struct.nn_surveyor*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.nn_msg, align 4
  store %struct.nn_surveyor* %0, %struct.nn_surveyor** %2, align 8
  %5 = load %struct.nn_surveyor*, %struct.nn_surveyor** %2, align 8
  %6 = getelementptr inbounds %struct.nn_surveyor, %struct.nn_surveyor* %5, i32 0, i32 1
  %7 = call i32 @nn_msg_cp(%struct.nn_msg* %4, i32* %6)
  %8 = load %struct.nn_surveyor*, %struct.nn_surveyor** %2, align 8
  %9 = getelementptr inbounds %struct.nn_surveyor, %struct.nn_surveyor* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = call i32 @nn_xsurveyor_send(i32* %10, %struct.nn_msg* %4)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = icmp eq i32 %12, 0
  %14 = zext i1 %13 to i32
  %15 = load i32, i32* %3, align 4
  %16 = sub nsw i32 0, %15
  %17 = call i32 @errnum_assert(i32 %14, i32 %16)
  ret void
}

declare dso_local i32 @nn_msg_cp(%struct.nn_msg*, i32*) #1

declare dso_local i32 @nn_xsurveyor_send(i32*, %struct.nn_msg*) #1

declare dso_local i32 @errnum_assert(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
